--- a/index.html
+++ b/index.html
@@ -9,60 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-    <title>Frontend Mentor | QR code component</title>
-
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      *,
-      *::before,
-      *::after {
-          box-sizing: border-box;
-          margin: 0;
-          padding: 0;
-          font-family: 'Outfit', sans-serif;
-          --white: hsl(0, 0%, 100%);
-          --grayLight: hsl(212, 45%, 89%);
-          --blueGray: hsl(220, 15%, 55%);
-          --blueDark: hsl(218, 44%, 22%);
-      }
-
-      body {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin: 0 auto;
-        min-height: 100vh;
-        background-color: var(--grayLight);
-      }
-
-      .card {
-        margin: 0 auto;
-        width: 100%;
-        padding: 15px;
-        border-radius: 20px;
-        background-color: var(--white);
-        box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
-      }
-
-      img {
-        border-radius: 10px;
-      }
-
-      .card__title {
-        text-align: center;
-        margin: 20px 0;
-        font-size: 1.4rem;
-        font-weight: 700;
-        color: var(--blueDark)
-      }
-
-      .card__text {
-        text-align: center;
-        margin-bottom: 20xp;
-        color: var(--blueGray);
-      }
-
-    </style>
+    <title><h1>Frontend Mentor | QR code component</h1></title>
 
   </head>
   <body>
@@ -75,6 +22,57 @@
         </section>
       </section>
     </div>
-    <hr />
   </body>
 </html>
+
+<style>
+  *,
+  *::before,
+  *::after {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+      font-family: 'Outfit', sans-serif;
+      --white: hsl(0, 0%, 100%);
+      --grayLight: hsl(212, 45%, 89%);
+      --blueGray: hsl(220, 15%, 55%);
+      --blueDark: hsl(218, 44%, 22%);
+  }
+
+  body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    min-height: 100vh;
+    background-color: var(--grayLight);
+  }
+
+  .card {
+    margin: 0 auto;
+    width: 100%;
+    padding: 15px;
+    border-radius: 20px;
+    background-color: var(--white);
+    box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
+  }
+
+  img {
+    border-radius: 10px;
+  }
+
+  .card__title {
+    text-align: center;
+    margin: 20px 0;
+    font-size: 1.4rem;
+    font-weight: 700;
+    color: var(--blueDark)
+  }
+
+  .card__text {
+    text-align: center;
+    margin-bottom: 20xp;
+    color: var(--blueGray);
+  }
+
+</style>
