--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   </head>
   <body>
-    <div class="container" role="complementary">
+    <main class="container" role="complementary">
       <section class="card" style= "width:50%">
         <img src="./images/image-qr-code.png" alt="qr code" width="100%">
         <h1 class="card__title">Improve your front-end skills by building projects</h1>
@@ -20,7 +20,7 @@
           <h2 class="card__text">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</h2>
         </section>
       </section>
-    </div>
+    </main>
   </body>
 </html>
 
