--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   </head>
   <body>
-    <main class="container" role="complementary">
+    <main class="container" role="main">
       <section class="card" style= "width:50%">
         <img src="./images/image-qr-code.png" alt="qr code" width="100%">
         <h1 class="card__title">Improve your front-end skills by building projects</h1>
