--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <main class="container" role="main">
       <section class="card" style= "width:50%">
-        <img src="./images/image-qr-code.png" alt="qr code" width="100%">
+        <img src="./images/image-qr-code.png" alt="qr code" width="100%" height="100%">
         <h1 class="card__title">Improve your front-end skills by building projects</h1>
         <section class="card__section--text">
           <h2 class="card__text">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</h2>
@@ -72,7 +72,7 @@
   .card__text {
     text-align: center;
     font-size: 0.6rem;
-    margin-bottom: 20xp;
+    margin-bottom: 8px;
     color: var(--blueGray);
   }
 
