--- a/index.html
+++ b/index.html
@@ -5,75 +5,107 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
     <title>Frontend Mentor | QR code component</title>
 
   </head>
   <body>
-    <main class="container" role="main">
-      <section class="card" style= "width:50%">
-        <img src="./images/image-qr-code.png" alt="qr code" width="100%" height="100%">
-        <h1 class="card__title">Improve your front-end skills by building projects</h1>
-        <section class="card__section--text">
-          <h2 class="card__text">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</h2>
-        </section>
-      </section>
+    <main class="card">
+      <img class="card__img" src="./images/image-qr-code.png" alt="qr-code">
+      <h1 class="card__heading">
+        Improve your front-end skills by building projects
+      </h1>
+      <p class="card__text">
+        Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+      </p>
     </main>
+    <footer class="attribution">
+      <p>
+          Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" rel="noopener">Frontend Mentor</a>.
+          Coded by <a href="https://github.com/Caius-Scipio/QR-Code-Component-Hub" target="_blank" rel="noopener">Caius Scipio</a>.
+      </p>
+  </footer>
   </body>
 </html>
 
 <style>
-  *,
-  *::before,
-  *::after {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-      font-family: 'Outfit', sans-serif;
-      font-size: 15px;
-      --white: hsl(0, 0%, 100%);
-      --grayLight: hsl(212, 45%, 89%);
-      --blueGray: hsl(220, 15%, 55%);
-      --blueDark: hsl(218, 44%, 22%);
+  @font-face {
+    font-family: "Outfit";
+    src: url(./fonts/Outfit.ttf) format("truetype-variations");
+    font-weight: 1 999;
+  }
+
+  :root {
+    --fontOutfit: "Outfit", sans-serif;
+    --grayLight: hsl(212, 45%, 89%);
+    --white: hsl(0, 0%, 100%);
+    --blueGray: hsl(220, 15%, 55%);
+    --blueDark: hsl(218, 44%, 22%);
+  }
+
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
   }
 
   body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0 auto;
+    display: grid;
+    place-items: center;
     min-height: 100vh;
     background-color: var(--grayLight);
+    font-family: var(--fontOutfit);
   }
 
-  .card {
-    margin: 0 auto;
-    width: 100%;
-    padding: 15px;
-    border-radius: 20px;
+  main {
+    display: flex;
+    flex-direction: column;
+    width: 20em;
+    height: 31em;
+    padding-bottom: 35px;
     background-color: var(--white);
-    box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
+    border-radius: 15px;
+    gap: 15px;
+    box-shadow: 0 2px 15px rgba(0,0,0,.1);
   }
 
-  img {
+  .card__img {
     border-radius: 10px;
+    margin: 15px;
+    margin-bottom: 9px;
   }
 
-  .card__title {
+  .card__heading {
+    align-self: center;
+    width: 90%;
     text-align: center;
-    margin: 20px 0;
-    font-size: 0.8rem;
-    font-weight: 700;
-    color: var(--blueDark)
+    font-size: 1.4rem;
+    line-height: 1.74rem;
+    color: var(--blueDark);
   }
 
   .card__text {
+    padding: 0 30px;
     text-align: center;
-    font-size: 0.6rem;
-    margin-bottom: 8px;
+    font-size: .95rem;
     color: var(--blueGray);
   }
 
+  .attribution {
+    position: absolute;
+    bottom: 0;
+    text-align: center;
+    font-size: 0.735rem;
+    margin-bottom: 1rem;
+  }
+
+  .attribution, a {
+    color: var(--dark-blue);
+  }
+
+  @media only screen and (max-width: 440px) {
+    .container {
+      width: 80%;
+    }
+  }
 </style>
